# enterprise_digitalization_system

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  alembic.ini  conftest.py  docker-compose.dev.yml  mapai-embed-demo.html  pyproject.toml  requirements-docling.txt
.github/workflows/: ci.yml  deploy.yml
agents/analysis_agent/: README.md  __init__.py  aggregation.py  correlation.py  dashboard_models.py  drill_down.py  executor.py  integration.py  models.py  nl2sql.py  schema_extractor.py  sql_safety.py  training_data.py
agents/business_agent/: __init__.py  integration.py
agents/client_agent/: .gitignore  README.md  TODO.md  auth.py  models.py  package.json  vite.config.js
agents/client_agent/src-tauri/: Cargo.toml  tauri.conf.json
agents/client_agent/src-tauri/src/: main.rs
agents/compliance_agent/: __init__.py  integration.py
agents/data_agent/: README.md  __init__.py  cleaning.py  compliance_guard.py  customs_models.py  customs_router.py  customs_sources.yaml  customs_store.py  geo_guard.py  integration.py  models.py  pipeline.py  push_service.py  report_models.py  report_renderer.py  router.py  scheduler.py
agents/dify_bridge/: __init__.py  bridge.py  models.py  router.py
agents/governance_agent/: README.md  __init__.py  decision_log.py  decision_log_integration.py
agents/hr_agent/: README.md  __init__.py  adapters.py  foolproof.py  integration.py  matching.py  models.py  profiling.py  redundancy.py  risk_assessment.py  router.py
agents/im_agent/: README.md  __init__.py  models.py  tools.py  webhook_routes.py  worker.py
agents/ingestion_agent/: __init__.py  cache.py  chunking.py  fts.py  mapping_loader.py  migration.py  normalization.py  parsers.py  pipeline.py  query.py  router.py  storage.py  store.py  task_models.py  tasks.py
agents/map_agent/: __init__.py  demo_data.py  engine.py  foolproof.py  interpreter.py  langgraph_nodes.py  location_enrich.py  marker_store.py  models.py  routes.py  tag_extractor.py  tasks.py  websocket.py  worker.py
agents/marketing_agent/: __init__.py  customs_audience_connector.py  customs_campaign_content.py  customs_campaign_pusher.py  customs_campaign_roi.py  customs_campaign_router.py  data_connector.py  models.py  report_generator.py  router.py
agents/observability_agent/: __init__.py  alerting.py  api_keys.py  audit_store.py  auth_middleware.py  budget.py  health_checker.py  middleware.py  models.py  rag_inspector.py  router.py  token_tracker.py  trace_store.py
agents/orchestrator/: README.md  __init__.py
agents/pricing_agent/: __init__.py  competitor_tracker.py  data_connector.py  demand_forecaster.py  elasticity_estimator.py  models.py  report_generator.py  router.py
agents/rag_agent/: README.md  __init__.py  auth_filter.py  chunking.py  document_parser.py  embeddings.py  integration.py  query_rewrite.py  reranker.py  retriever.py  vector_store.py
agents/router_agent/: README.md  main.py
alembic/: env.py
alembic/versions/: 0001_baseline_schema.py  0002_add_permissions.py  0003_create_ingestion_tables.py
config/: field_mapping.yaml
deploy/: Dockerfile  docker-compose.prod.yml  healthcheck.sh
deploy/config-templates/: .env.prod.example
deploy/litellm/: .env.example  config.yaml  docker-compose.yml
deploy/loki/: loki-config.yml
deploy/nginx/: nginx.conf
deploy/prometheus/: alerts.yml  prometheus.yml
deploy/rsshub/: .env.example  docker-compose.yml
deploy/scripts/: deploy-blue-green.sh  migrate.sh  rollback.sh  up.sh
docs/: architecture.md  code-review-2026-06-30.md  code-review-v1.0.0.md  connector-contract.md  credential-storage-spec.md  customs-compliance-checklist.md  customs-geo-campaign-guide.md  data-infra-runbook.md  data-ingestion-layer-plan.md  environment-audit.md  fde-dify-integration-guide.md  fde-dify-openapi.yaml  implementation-roadmap.md  ingestion-cleaning-module-plan.md  litellm-gateway.md  logistics-connector-integration-analysis.md  m1-m2-architecture-audit.md  m3-architecture-audit.md  m3-collaboration-plan.md  m3-plan.md  m3-trae-task-breakdown.md  m4-collaboration-plan.md  m4-plan-review.md  m4-plan.md  map-code-review.md  mapai-embed-plan.md  master-delivery-plan.md  master-plan-review.md  module-requirement-audit.md  multi-source-database-plan.md  oss-optimization-roadmap.md  p2a-mvs-acceptance-report.md  p2b-runbook.md  p3-rag-optimization-report.md  parser-upgrade-guide.md  persist-markers-plan.md  plan-vs-actual-review.md  plans-review.md  rag-deployment-verification-and-perf.md  rag-performance-improvement-plan.md  (+16 more)
docs/dify-workflows/: README.md  contract-analysis.json  data-qa.json  intel-briefing.json  pricing-advisor.json  redundancy-eval.json
docs/operations/: runbook.md
docs/specs/: m3-t10-map-backend-spec.md  m3-t3-nl2sql-spec.md
docs/training/: certification.md  exam-bank.md  manual.md  video-scripts.md
frontend/hr-portal/: index.html  package-lock.json  package.json  vite.config.ts
frontend/hub/: index.html  package-lock.json  package.json  vite.config.ts
frontend/intelligence-portal/: index.html  package-lock.json  package.json  vite.config.ts
frontend/map-ai/: .env.example  .gitignore  INTEGRATION.md  index.html  package-lock.json  package.json  vite.config.ts  vite.lib.config.ts
frontend/marketing-portal/: index.html  package-lock.json  package.json  vite.config.ts
frontend/observability-portal/: index.html  package-lock.json  package.json  vite.config.ts
frontend/portal/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/pricing-portal/: index.html  package-lock.json  package.json  vite.config.ts
frontend/training-portal/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: demo.sh  ingest_knowledge_base.py  r2_docling_regression.py
shared/contracts/: __init__.py  connector_contract.py
shared/prompts/: __init__.py  registry.py  (+1 more)
tests/: test_connector_contract.py  test_e2e.py  test_eval.py  test_im_real.py  test_m3_e2e.py  test_m4_e2e.py  test_observability.py  test_smoke.py
(+284 files in other folders)
