[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fde-ai-platform"
version = "0.1.0"
description = "FDE Enterprise AI Platform — modular, on-premise deployable AI capabilities"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "FDE AI Team", email = "mike@fde.ai" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "orjson>=3.10.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
]

[project.optional-dependencies]
# ── Router Agent ──────────────────────────────────────────────────
router = [
    "openai>=1.50.0",
]

# ── RAG Agent ─────────────────────────────────────────────────────
rag = [
    "qdrant-client>=1.12.0,<2.0",  # >=1.12 for query_points API (search() removed in 1.14); <2.0 keeps v1 line
    "sentence-transformers>=3.1.0",
    "torch>=2.3.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.0",
    "markdown-it-py>=3.0.0",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    "tiktoken>=0.7.0",
]

# ── Governance Agent ──────────────────────────────────────────────
governance = [
    "SQLAlchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis[hiredis]>=5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-ldap>=3.4.0",
    "pydantic[email]>=2.8.0",
]

# ── Data Agent ────────────────────────────────────────────────────
data = [
    "scrapy>=2.11.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "feedparser>=6.0.0",
    "newspaper3k>=0.2.8",
    "clickhouse-connect>=0.7.0",
    "jinja2>=3.1.0",
    "matplotlib>=3.8.0",
    "apscheduler>=3.10.0",
]

# ── Analysis Agent ────────────────────────────────────────────────
analysis = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "plotly>=5.22.0",
]

# ── Observability ──────────────────────────────────────────────────
observability = [
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "prometheus-client>=0.20.0",
    "langfuse>=2.50.0",
]

# ── Dev tools ──────────────────────────────────────────────────────
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.32.0",
    "types-redis>=4.6.0",
]

# ── Evaluation (Ragas + Promptfoo) ────────────────────────────────
eval = [
    "ragas>=0.2.0",
    "datasets>=2.20.0",    # HuggingFace datasets (Ragas dependency)
]

# ── All extras (except heavy RAG deps) ─────────────────────────────
all = [
    "fde-ai-platform[router,governance,observability,analysis,data,eval]",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "shared*",
    "agents/*",
]
exclude = ["tests*", "docs*", "deploy*", ".github*"]

# ══════════════════════════════════════════════════════════════════
# Tool Configurations
# ══════════════════════════════════════════════════════════════════

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line-too-long (handled by ruff format)
    "B008",  # do-not-perform-function-calls-in-argument-defaults
    "B904",  # raise-without-from-inside-except (intentional in lazy-import blocks)
    "SIM108", # use-ternary-operator (style preference)
    "RUF001", # ambiguous-unicode-character (false positives for CJK text)
    "RUF002", # ambiguous-unicode-character-docstring (false positives for CJK text)
    "RUF003", # ambiguous-unicode-character-comment (false positives for CJK text)
    "RUF043", # ambiguous-unicode-regex (false positives for CJK + regex)
    "RUF012", # mutable-class-default (intentional for subclass overridable attrs)
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["shared", "agents"]
force-single-line = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.13"
strict = true
strict_optional = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
explicit_package_bases = true

# Per-module overrides for packages without type stubs.
[[tool.mypy.overrides]]
module = [
    "agents.*.tests.*",
    "tests.*",
]
disable_error_code = ["no-any-return", "arg-type", "no-untyped-call", "no-untyped-def", "var-annotated", "assignment", "union-attr", "comparison-overlap"]

[[tool.mypy.overrides]]
module = [
    "qdrant_client.*",
    "rank_bm25",
    "jieba",
    "openpyxl",
    "sentence_transformers",
    "pymupdf",
    "langgraph.*",
    "langchain_core.*",
    "langsmith.*",
    "ragas.*",
    "datasets",
    "jinja2",
    "matplotlib",
    "matplotlib.*",
    "apscheduler.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["agents", "tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=shared",
    "--cov=agents",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=0",  # Raise to 20 after M1 agent code is written
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]